other-vpol/docker-socket-requires-label/docker-socket-requires-label.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: docker-socket-check
  annotations:
    policies.kyverno.io/title: Docker Socket Requires Label in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Accessing a container engine's socket is for highly specialized use cases and should generally
      be disabled. If access must be granted, it should be done on an explicit basis. This policy
      requires that, for any Pod mounting the Docker socket, it must have the label `allow-docker` set
      to `true`.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  variables:
    - name: hasDockerSocket
      expression: "object.spec.?volumes.orValue([]).exists(volume, volume.?hostPath.?path.orValue('') == '/var/run/docker.sock')"
    - name: isAllowDockerLabelTrue
      expression: "object.metadata.?labels[?'allow-docker'].orValue('false') == 'true'"
  validations:
    - expression: "(has(exceptions.allowedValues) && object.metadata.name in exceptions.allowedValues) || !variables.hasDockerSocket || variables.isAllowDockerLabelTrue"
      message: "If a hostPath volume exists and is set to `/var/run/docker.sock`, the label `allow-docker` must equal `true`."
