other-vpol/docker-socket-requires-label/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: docker-socket-check-exception
policies: [../docker-socket-requires-label.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exception.yaml]
results:
- isValidatingPolicy: true
  kind: Pod
  policy: docker-socket-check
  resources: [default/nginx-bad-1]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: docker-socket-check
  resources: [default/nginx-bad-2]
  result: fail
